[package]
name = "etk"
version = "0.2.0"
edition = "2021"
description = "Egui's toolkit"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
egui_backend = { path = "crates/egui_backend", features = ["winit", "wgpu"]}
egui = { version = "*" }
console_error_panic_hook = "0.1.6"
tracing-wasm = "*"



[workspace]
members = ["crates/egui_backend"]
