[package]
name = "egui_backend"
version = "0.2.0"
edition = "2021"
description = "Traits to streamline egui window and render integrations"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["egui_default_fonts"]

# [`bytemuck`](https://docs.rs/bytemuck) enables you to cast [`epaint::Vertex`], [`emath::Vec2`] etc to `&[u8]`.
egui_bytemuck = ["egui/bytemuck"]

## [`cint`](https://docs.rs/cint) enables interopability with other color libraries.
egui_cint = ["egui/cint"]

## Enable the [`hex_color`] macro.
egui_color-hex = ["egui/color-hex"]

## This will automatically detect deadlocks due to double-locking on the same thread.
## If your app freezes, you may want to enable this!
## Only affects [`epaint::mutex::RwLock`] (which egui uses a lot).
egui_deadlock_detection = ["egui/deadlock_detection"]

## If set, egui will use `include_bytes!` to bundle some fonts.
## If you plan on specifying your own fonts you may disable this feature.
egui_default_fonts = ["egui/default_fonts"]

## Enable additional checks if debug assertions are enabled (debug builds).
egui_extra_debug_asserts = ["egui/extra_debug_asserts"]
## Always enable additional checks.
egui_extra_asserts = ["egui/extra_asserts"]

## [`mint`](https://docs.rs/mint) enables interopability with other math libraries such as [`glam`](https://docs.rs/glam) and [`nalgebra`](https://docs.rs/nalgebra).
egui_mint = ["egui/mint"]

## Enable persistence of memory (window positions etc).
egui_persistence = ["egui/serde", "egui/ron"]

## Allow serialization using [`serde`](https://docs.rs/serde).
egui_serde = ["egui/serde"]


[dependencies]
raw-window-handle = "0.5"
egui = { version = "0.20", default-features = false }
tracing = { version = "0.1" }
intmap = { version = "2.0" }
bytemuck = { version = "1.12" }
# winit backend. 
winit = { version = "0.27", optional = true }
glow = { version = "0.11", optional = true }
three-d = { version = "0.14", optional = true }
pollster = { version = "0.2", optional = true }


