[package]
name = "egui_render_glow"
version = "0.4.1"
edition = "2021"
description = "egui rendering backend using glow"
license = "MIT"

[dependencies]
tracing = { version = "0.1" }
intmap = { version = "2.0" }
bytemuck = { version = "1.12" }
glow = { version = "0.12" }
egui_backend = { version = "0.4", path = "../egui_backend", features = ["egui_bytemuck"] }

[target.'cfg(all(target_arch = "wasm32", not(target_os = "emscripten")))'.dependencies]
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3" }
getrandom = { version = "0.2", features = [
    "js",
] } # https://github.com/emilk/egui/issues/2009
js-sys = { version = "0.3" }
