[package]
name = "egui_render_three_d"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_backend = { version = "0.2.0", path = "../egui_backend" }
egui_render_glow = { version = "0.2.0", path = "../egui_render_glow" }
three-d = { version = "0.13.0" }
