[package]
name = "egui_render_three_d"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "three_d render integration for egui"
repository = "https://github.com/coderedart/etk"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_backend = { version = "0.2.0" }
egui_render_glow = { version = "0.2.0" }
three-d = { version = "0.13.0" }
