[package]
name = "egui_window_glfw"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "glfw window integration for egui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["glfw/default"]
# features of glfw crate re-exported
glfw_all = ["glfw/all"]
glfw_vulkan = ["glfw/vulkan"]
glfw_wayland = ["glfw/wayland"]

[dependencies]
glfw = { version = "0.45", default-features = false }
egui_backend = { version = "0.2", path = "../egui_backend" }
