[package]
name = "egui_window_glfw_passthrough"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_backend = { version = "*", path = "../egui_backend" }
glfw = { version = "*", package = "glfw-passthrough" }
tracing = { version = "*" }
