[package]
name = "egui_window_sdl2"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "sdl2 window integration for egui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.35", features = ["raw-window-handle"] }
egui_backend = { version = "0.1", path = "../egui_backend" }
