[package]
name = "egui_window_winit"
version = "0.1.0"
edition = "2021"

[features]


[dependencies]
egui_backend = { version = "*", path = "../egui_backend" }
winit = { version = "*", git = "https://github.com/rust-windowing/winit" , features = ["android-native-activity"]}
tracing = { version = "0.1" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2"}
web-sys = { version = "0.3"}
js-sys = { version = "0.3"}

getrandom = { version = "0.2", features = [
    "js",
], optional = true } # https://github.com/emilk/egui/issues/2009
