[package]
name = "glfw_rend3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_backend = { path = "../../crates/egui_backend" }
egui_window_glfw_passthrough = { path = "../../crates/egui_window_glfw_passthrough" }
egui_render_rend3 = { path = "../../crates/egui_render_rend3" }
rend3-gltf = { git = "https://github.com/BVE-Reborn/rend3.git" }
pollster = { version = "*" }
glam = { version = "*" }
rend3 = { git = "https://github.com/BVE-Reborn/rend3.git" }

rend3-routine = { git = "https://github.com/BVE-Reborn/rend3.git" }
tracing-subscriber = { version = "*", features = ["env-filter", "registry"] }
