[package]
name = "winit_wgpu"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_backend = { path = "../../crates/egui_backend" }
egui_window_winit = { path = "../../crates/egui_window_winit" }
egui_render_wgpu = { path = "../../crates/egui_render_wgpu" }
tracing-subscriber = { version = "*", features = ["env-filter"] }
